@@ -10,6 +10,7 @@ distribution_type:        module
 installdirs:              site
 
 requires:
+  perl:                             5.006
   Class::Accessor::Fast:            0
   CPAN::DistnameInfo:               0.10
   CPAN::Testers::Common::Article:   0
